Updates to Model Files
cleaned up the notebooks and organized all imports to be in the bin folder

--- a/modeling/scorecard_review.ipynb
+++ b/modeling/scorecard_review.ipynb
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, json\n",
     "#HTML Display\n",
-    "from html_functions import ez_display as d"
+    "from bin.html_functions import ez_display as d"
    ]
   },
   {
@@ -72,16 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "publication_scorecard = \"publication_scorecard.json\""
+    "data_folder = \"data\"\n",
+    "publication_scorecard_filename = \"publication_scorecard.json\"\n",
+    "publication_scorecard_filepath = os.path.join(data_folder,publication_scorecard_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(publication_scorecard) as fp:\n",
+    "with open(publication_scorecard_filepath) as fp:\n",
     "    scorecard = json.load(fp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "add_value_to_scorecard() missing 2 required positional arguments: 'publication' and 'political_spectrum'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-699a25fb4051>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0madd_value_to_scorecard\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: add_value_to_scorecard() missing 2 required positional arguments: 'publication' and 'political_spectrum'"
+     ]
+    }
+   ],
    "source": [
     "add_value_to_scorecard()"
    ]
@@ -180,8 +194,8 @@
    "outputs": [],
    "source": [
     "def save_scorecard():\n",
-    "    os.remove(publication_scorecard)\n",
-    "    with open('publication_scorecard.json','w') as fp:\n",
+    "    os.remove(publication_scorecard_filepath)\n",
+    "    with open(publication_scorecard_filepath,'w') as fp:\n",
     "        json.dump(scorecard,fp)"
    ]
   },
